EL-2455 - Fixing checkbox alignment in Firefox

--- a/src/components/checkbox/checkbox.component.less
+++ b/src/components/checkbox/checkbox.component.less
@@ -111,7 +111,7 @@ input[type="checkbox"] {
     margin-left: 7px;
     margin-top: 1px;
     white-space: normal;
-    vertical-align: bottom;
+    vertical-align: top;
     height: 24px;
     cursor: default;
     line-height: 22px;
